--- a/src/assets/CSS/admin_database.css
+++ b/src/assets/CSS/admin_database.css
@@ -132,7 +132,6 @@
 }
 
 .context-menu {
-    -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
     -fx-background-color: transparent;
     -fx-pref-width: 210;
 }
@@ -151,61 +150,114 @@
 
 /** TABLE VIEW **/
 
+.table-button {
+    -fx-background-color: -fx-primary-color;
+    -fx-cursor: hand;
+}
+.table-button:hover {
+    -fx-background-color: -fx-secondary-color;
+}
+
 .table-view {
-    -fx-base: #f5f5f5;
-    -fx-control-inner-background: #f5f5f5;
-    -fx-table-cell-border-color: transparent;
-    -fx-table-header-border-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-color: -white;
+    -fx-background-radius: 43;
 }
 
-.table-view .column-header-background {
-    -fx-background-color: -fx-table-header-border-color, -fx-background;
-    -fx-background-insets: 0, 1;
-    -fx-background-radius: 3, 2;
-}
-
-.table-view .column-header, .table-view .filler {
-    -fx-size: 35;
-    -fx-border-width: 0 0 1 0;
-    -fx-border-color:
-        transparent
-        transparent
-        derive(-fx-base, 80%)
-        transparent;
-    -fx-border-insets: 0 10 1 0;
-    -fx-background-color: -fx-table-header-border-color, -fx-background;
-    -fx-background-insets: 0, 1;
-    -fx-background-radius: 3, 2;
-    -fx-padding: 0.2em 0.333333em 0.2em 0.333333em; /* 2 4 2 4 */
-    -fx-font-size: 14px;
-    -fx-font-weight: bold;
-    -fx-text-fill: -fx-text-inner-color;
-    -fx-alignment: center-left;
-}
-
-.table-view .column-header .label {
-    -fx-translate-x: 4;
-}
-
-.table-view:focused .table-row-cell:filled:focused:selected {
-    -fx-background-color: -fx-focus-color, -fx-control-inner-background;
-    -fx-background-insets: -0.2, 1;
-    -fx-background-radius: 3, 2;
-}
-
-.table-view .table-cell {
-    -fx-padding: 0.166667em 0.333333em 0.166667em 0.333333em; /* 2 4 2 4 */
-}
-
-.table-view .table-cell:empty {
+.table-view{
     -fx-background-color: transparent;
 }
 
-.table-view .table-cell:filled:selected {
-    -fx-background-color: -fx-accent;
-    -fx-text-fill: white;
+.table-view:focused{
+    -fx-background-color: transparent;
 }
 
-.table-view .table-cell:filled:hover {
-    -fx-background-color: derive(-fx-base, 10%);
+.table-view .column-header-background{
+    -fx-background-color: -tertiary-color;
+    -fx-background-radius: 20 20 0 0;
+    -fx-border-color: -white;
+}
+
+.table-view .column-header-background .label{
+    -fx-background-color: transparent;
+    -fx-text-fill: -white;
+    -fx-font-family: 'Krona One';
+    -fx-font-size: 14;
+    -fx-padding: 10;
+}
+
+.table-view .column-header {
+    -fx-background-color: transparent;
+}
+
+.table-view .table-cell{
+    -fx-alignment: center-left;
+    -fx-font-family: 'Krona One';
+    -fx-text-fill: -white;
+    -fx-padding: 10 5 10 5;
+}
+
+.table-row-cell {
+    -fx-border-width: 0 0 1px 0;
+    -fx-border-color: -tertiary-color;
+    -fx-background-color: -white;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+
+
+.table-row-cell .label {
+    -fx-font-family: 'Krona One';
+    -fx-font-size: 11;
+}
+
+
+.table-row-cell:selected {
+    -fx-background-color: -primary-color;
+
+}
+
+.table-row-cell:empty {
+    -fx-background-color: transparent;
+    -fx-border-width: 0 0 0 0;
+}
+
+.table-row-cell:filled:hover {
+    -fx-background-color: -secondary-color;
+}
+.table-row-cell:filled:selected:hover {
+    -fx-background-color: -secondary-color;
+}
+
+.table-view .placeholder .label {
+    -fx-text-fill: -primary-color;
+    -fx-padding:20px;
+}
+
+.table-row-cell:filled .table-cell {
+    -fx-text-fill: -tertiary-color;
+}
+
+.table-row-cell:filled:selected .table-cell {
+    -fx-text-fill: -tertiary-color;
+}
+
+.table-view > .virtual-flow > .scroll-bar:vertical,
+.table-view > .virtual-flow > .scroll-bar:vertical > .track,
+.table-view > .virtual-flow > .scroll-bar:vertical > .track-background,
+.table-view > .virtual-flow > .scroll-bar:horizontal,
+.table-view > .virtual-flow > .scroll-bar:horizontal > .track,
+.table-view > .virtual-flow > .scroll-bar:horizontal > .track-background {
+    -fx-background-color: transparent;
+}
+
+
+
+.table-view > .virtual-flow > .scroll-bar > .increment-button,
+.table-view > .virtual-flow > .scroll-bar > .decrement-button {
+    -fx-opacity: 0;
+}
+
+.table-view .filler{
+    -fx-background-color: transparent;
 }
