--- a/src/assets/CSS/admin_database.css
+++ b/src/assets/CSS/admin_database.css
@@ -150,22 +150,11 @@
 
 /** TABLE VIEW **/
 
-.table-button {
-    -fx-background-color: -fx-primary-color;
-    -fx-cursor: hand;
-}
-.table-button:hover {
-    -fx-background-color: -fx-secondary-color;
-}
-
 .table-view {
     -fx-border-color: transparent;
     -fx-background-color: -white;
     -fx-background-radius: 43;
-}
-
-.table-view{
-    -fx-background-color: transparent;
+    -fx-table-cell-border-color: transparent;
 }
 
 .table-view:focused{
@@ -191,7 +180,6 @@
 }
 
 .table-view .table-cell{
-    -fx-alignment: center-left;
     -fx-font-family: 'Krona One';
     -fx-text-fill: -white;
     -fx-padding: 10 5 10 5;
@@ -211,10 +199,13 @@
     -fx-font-size: 11;
 }
 
+.table-row-cell .text-field {
+    -fx-font-family: 'Krona One';
+    -fx-font-size: 11;
+}
 
 .table-row-cell:selected {
     -fx-background-color: -primary-color;
-
 }
 
 .table-row-cell:empty {
@@ -226,7 +217,7 @@
     -fx-background-color: -secondary-color;
 }
 .table-row-cell:filled:selected {
-    -fx-background-color: -secondary-color;
+    -fx-background-color: -primary-color;
 }
 
 .table-view .placeholder .label {
@@ -260,4 +251,10 @@
 
 .table-view .filler{
     -fx-background-color: transparent;
+}
+
+/** LOADING **/
+
+.loading {
+    -fx-progress-color: -primary-color;
 }
