--- a/src/assets/CSS/admin_database.css
+++ b/src/assets/CSS/admin_database.css
@@ -123,6 +123,10 @@
     -fx-text-fill: -white;
 }
 
+.toolbar-menu .arrow-button {
+    -fx-background-color: transparent;
+}
+
 .toolbar-menu:hover  {
     -fx-background-color: -secondary-color;
 }
@@ -197,11 +201,20 @@
 .table-row-cell .label {
     -fx-font-family: 'Krona One';
     -fx-font-size: 11;
+    -fx-text-fill: -tertiary-color;
 }
 
-.table-row-cell .text-field {
+.table-row-cell .text-field-table-cell {
     -fx-font-family: 'Krona One';
     -fx-font-size: 11;
+    -fx-text-fill: -tertiary-color;
+}
+
+.table-row-cell .text-field-table-cell:selected {
+    -fx-font-family: 'Krona One';
+    -fx-font-size: 11;
+    -fx-text-fill: -tertiary-color;
+    -fx-border-color: transparency;
 }
 
 .table-row-cell:selected {
@@ -257,4 +270,138 @@
 
 .loading {
     -fx-progress-color: -primary-color;
+}
+
+
+/** COMBO BOX **/
+
+.combo-box {
+    -fx-background-color: -white-smoke;
+    -fx-text-fill: -tertiary-color;
+    -fx-padding: 5;
+    -fx-background-radius: 43;
+    -fx-border-color: transparent;
+}
+
+.combo-box:hover {
+    -fx-background-color: -white;
+}
+
+
+.combo-box .list-cell {
+    -fx-background-color: -white-smoke;
+    -fx-text-fill: -tertiary-color;
+}
+
+.combo-box .list-cell {
+    -fx-background-color: -white-smoke;
+    -fx-text-fill: -tertiary-color;
+}
+
+.combo-box-popup {
+    -fx-background-color: -white-smoke;
+    -fx-border-color: transparency;
+    -fx-padding: 10;
+}
+
+.combo-box-popup .list-cell {
+    -fx-background-color: -white-smoke;
+    -fx-text-fill: -tertiary-color;
+    -fx-font-size: 11;
+}
+
+.combo-box-popup .list-cell:hover {
+    -fx-background-color: -secondary-color;
+    -fx-text-fill: -tertiary-color;
+}
+
+.combo-box-popup .list-cell:selected {
+    -fx-background-color: -primary-color;
+    -fx-text-fill: -white;
+}
+
+.combo-box .text-input {
+    -fx-background-color: -white-smoke;
+    -fx-text-fill: -tertiary-color;
+    -fx-font-size: 11;
+    -fx-padding: 5;
+}
+
+.combo-box:hover .text-input:hover {
+    -fx-background-color: -white;
+}
+
+.combo-box .arrow-button {
+    -fx-background-color: transparent;
+    -fx-padding: 7px;
+    -fx-background-radius: 43;
+}
+
+.combo-box .arrow-button:hover {
+    -fx-background-color: -secondary-color;
+}
+
+.combo-box .arrow-button:pressed {
+    -fx-background-color: -primary-color;
+}
+
+.neighbor-container {
+    -fx-spacing: 5;
+}
+
+/** TEXT INPUT **/
+
+.text-input {
+    -fx-background-color: -white-smoke;
+    -fx-text-fill: -tertiary-color;
+    -fx-font-size: 11;
+    -fx-padding: 5;
+    -fx-background-radius: 43;
+}
+
+.text-input:hover {
+    -fx-background-color: -white;
+}
+
+.delete-button {
+    -fx-pref-width: 100;
+    -fx-min-height: 35;
+    -fx-background-color: -red-color;
+    -fx-background-radius: 43;
+    -fx-background-insets: 0;
+    -fx-font-family: 'Krona One';
+    -fx-font-size: 10;
+    -fx-cursor: hand;
+    -fx-text-fill: -white;
+}
+
+.delete-button:hover {
+    -fx-background-color: -red-color-secondary;
+}
+
+.delete-button:armed {
+    -fx-background-color: -red-color;
+}
+
+
+
+.add-button {
+    -fx-pref-width: 100;
+    -fx-min-height: 35;
+    -fx-background-color: -primary-color;
+    -fx-background-radius: 43;
+    -fx-background-insets: 0;
+    -fx-font-family: 'Krona One';
+    -fx-font-size: 10;
+    -fx-cursor: hand;
+    -fx-text-fill: -white;
+}
+
+.add-button:hover {
+    -fx-background-color: -white;
+    -fx-text-fill: -tertiary-color;
+}
+
+.add-button:armed {
+    -fx-background-color: -primary-color;
 }
