correction font error

--- a/src/assets/CSS/admin_user.css
+++ b/src/assets/CSS/admin_user.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Krona One';
-    src: url(../Fonts/Krona-One-Regular.ttf);
+    src: url(../Fonts/KronaOne-Regular.ttf);
 }
 
 *{
