--- a/src/assets/CSS/setting.css
+++ b/src/assets/CSS/setting.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Krona One';
-    src: url(../assets/fonts/KronaOne-Regular.ttf);
+    src: url(../Fonts/KronaOne-Regular.ttf);
 }
 
 *{
