--- a/src/assets/FXML/AdminScene.fxml
+++ b/src/assets/FXML/AdminScene.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
@@ -43,6 +43,6 @@
                <Button fx:id="button_deco_register" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: #FFB561;" text="Déconnexion" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
             </children>
          </GridPane>
-         <FlowPane prefHeight="820.0" prefWidth="348.0" />
+      <BorderPane layoutX="45.0" layoutY="50.0" prefHeight="599.0" prefWidth="779.0" style="-fx-background-color: blue;" />
       </children>
 </AnchorPane>
