--- a/src/assets/FXML/admin_dashboard.fxml
+++ b/src/assets/FXML/admin_dashboard.fxml
@@ -9,15 +9,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_database.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_dashboard.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
    <children>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" layoutY="63.2" prefHeight="682.0" prefWidth="1116.0" styleClass="adminpage-base" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -118,30 +120,60 @@
                         <Insets bottom="10.0" left="20.0" />
                      </HBox.margin>
                      <children>
-                        <VBox prefHeight="610.0" prefWidth="814.0" styleClass="user-box">
-                           <FlowPane.margin>
-                              <Insets />
-                           </FlowPane.margin>
+                        <GridPane prefHeight="610.0" prefWidth="814.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="394.199951171875" minWidth="10.0" prefWidth="339.2000244140625" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.2000732421875" minWidth="10.0" prefWidth="475.1999755859376" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="548.0000061035156" minHeight="10.0" prefHeight="330.4" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="491.19997711181634" minHeight="10.0" prefHeight="263.19999999999993" vgrow="SOMETIMES" />
+                          </rowConstraints>
                            <children>
-                              <FlowPane prefHeight="675.0" prefWidth="814.0">
+                              <LineChart prefHeight="367.0" prefWidth="465.0" GridPane.columnIndex="1">
+                                <xAxis>
+                                  <CategoryAxis side="BOTTOM" />
+                                </xAxis>
+                                <yAxis>
+                                  <NumberAxis side="LEFT" />
+                                </yAxis>
+                                 <GridPane.margin>
+                                    <Insets right="10.0" top="10.0" />
+                                 </GridPane.margin>
+                              </LineChart>
+                              <GridPane GridPane.halignment="CENTER">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints maxHeight="154.19998779296876" minHeight="10.0" prefHeight="68.00001220703125" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="299.99999389648434" minHeight="10.0" prefHeight="270.3999877929687" vgrow="SOMETIMES" />
+                                </rowConstraints>
                                  <children>
-                                    <ComboBox prefWidth="150.0" />
-                                    <ComboBox prefWidth="150.0" />
-                                    <LineChart>
-                                      <xAxis>
-                                        <CategoryAxis side="BOTTOM" />
-                                      </xAxis>
-                                      <yAxis>
-                                        <NumberAxis side="LEFT" />
-                                      </yAxis>
-                                    </LineChart>
-                                    <PieChart />
-                                    <TextArea prefHeight="200.0" prefWidth="200.0" />
-                                    <TextArea prefHeight="200.0" prefWidth="200.0" />
+                                    <ComboBox prefWidth="150.0" promptText="Commune1" GridPane.halignment="CENTER">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" top="10.0" />
+                                       </GridPane.margin></ComboBox>
+                                    <ComboBox prefWidth="150.0" promptText="Commune2" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" top="10.0" />
+                                       </GridPane.margin></ComboBox>
+                                    <Label alignment="TOP_LEFT" prefHeight="398.0" prefWidth="170.0" styleClass="show-text" text="Label" GridPane.rowIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" top="7.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label alignment="TOP_LEFT" prefHeight="278.0" prefWidth="170.0" styleClass="show-text" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" top="7.0" />
+                                       </GridPane.margin>
+                                    </Label>
                                  </children>
-                              </FlowPane>
+                              </GridPane>
+                              <PieChart prefHeight="294.0" prefWidth="340.0" GridPane.rowIndex="1" />
                            </children>
-                        </VBox>
+                        </GridPane>
                      </children>
                   </FlowPane>
                </children>
