--- a/src/assets/CSS/admin_dashboard.css
+++ b/src/assets/CSS/admin_dashboard.css
@@ -98,7 +98,7 @@
     -fx-background-radius: 43;
     -fx-background-insets: 0;
     -fx-font-family: 'Krona One';
-    -fx-font-size: 14;
+    -fx-font-size: 11;
     -fx-cursor: hand;
     -fx-text-fill: -white;
 }
@@ -110,7 +110,7 @@
 
 .combo-box .list-cell {
     -fx-background-color: transparent;
-    -fx-text-fill: -tertiary-color;
+    -fx-text-fill: -white;
     -fx-background-radius: 43;
 }
 
