--- a/src/assets/FXML/admin_dashboard.fxml
+++ b/src/assets/FXML/admin_dashboard.fxml
@@ -132,10 +132,10 @@
                            <children>
                               <LineChart fx:id="linechart_stats" prefHeight="367.0" prefWidth="465.0" GridPane.columnIndex="1">
                                 <xAxis>
-                                  <CategoryAxis side="BOTTOM" />
+                                  <CategoryAxis side="BOTTOM" fx:id="xAxis" />
                                 </xAxis>
                                 <yAxis>
-                                  <NumberAxis side="LEFT" />
+                                  <NumberAxis fx:id="yAxis" side="LEFT" />
                                 </yAxis>
                                  <GridPane.margin>
                                     <Insets right="10.0" top="10.0" />
