--- a/src/assets/FXML/admin_dashboard.fxml
+++ b/src/assets/FXML/admin_dashboard.fxml
@@ -2,6 +2,10 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -115,21 +119,17 @@
                      <children>
                         <VBox alignment="TOP_CENTER" prefHeight="610.0" prefWidth="814.0">
                            <children>
-                              <HBox prefHeight="60.0" prefWidth="806.0" spacing="20.0">
+                              <HBox prefHeight="98.0" prefWidth="804.0" spacing="10.0">
                                  <children>
                                     <ComboBox fx:id="combobox_communeA" onAction="#selectionCommuneA" prefWidth="150.0" promptText="Commune1">
                                        <padding>
                                           <Insets left="10.0" />
                                        </padding>
                                     </ComboBox>
-                                    <ComboBox fx:id="combobox_communeB" onAction="#selectionCommuneB" prefWidth="150.0" promptText="Commune2">
-                                       <padding>
-                                          <Insets left="10.0" />
-                                       </padding>
-                                    </ComboBox>
+                                    <Label fx:id="textarea_communeA" alignment="TOP_LEFT" prefHeight="114.0" prefWidth="446.0" styleClass="show-text" />
                                     <ComboBox fx:id="combobox_communeB1" onAction="#selectionCommuneB" prefWidth="150.0" promptText="Filtres">
                                        <HBox.margin>
-                                          <Insets left="274.0" />
+                                          <Insets />
                                        </HBox.margin>
                                        <padding>
                                           <Insets left="10.0" />
@@ -139,6 +139,35 @@
                                  <VBox.margin>
                                     <Insets left="10.0" top="10.0" />
                                  </VBox.margin>
+                              </HBox>
+                              <HBox prefHeight="98.0" prefWidth="804.0" spacing="10.0">
+                                 <children>
+                                    <ComboBox fx:id="combobox_communeB" onAction="#selectionCommuneB" prefWidth="150.0" promptText="Commune2">
+                                       <padding>
+                                          <Insets left="10.0" />
+                                       </padding>
+                                    </ComboBox>
+                                    <Label fx:id="textarea_communeB" alignment="TOP_LEFT" prefHeight="100.0" prefWidth="446.0" styleClass="show-text" />
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets left="10.0" top="5.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="394.0" prefWidth="794.0" spacing="5.0">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+                                 </VBox.margin>
+                                 <children>
+                                    <LineChart fx:id="linechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="384.0" prefWidth="491.0">
+                                      <xAxis>
+                                        <CategoryAxis side="BOTTOM" />
+                                      </xAxis>
+                                      <yAxis>
+                                        <NumberAxis side="LEFT" />
+                                      </yAxis>
+                                    </LineChart>
+                                    <PieChart fx:id="piechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" />
+                                 </children>
                               </HBox>
                            </children>
                         </VBox>
