--- a/src/assets/CSS/admin_dashboard.css
+++ b/src/assets/CSS/admin_dashboard.css
@@ -160,6 +160,7 @@
     -fx-font-size: 11;
     -fx-padding: 5;
     -fx-background-radius: 20;
+    -fx-font-family: 'Krona One';
 }
 
 
@@ -180,4 +181,31 @@
 }
 .chart-horizontal-grid-lines {
     -fx-stroke: -tertiary-color;
+}
+
+.chart-legend {
+    -fx-background-color:  transparent;
+    -fx-padding: 10px;
+    -fx-font-size: 10;
+    -fx-font-family: 'Krona One';
+}
+
+.chart-legend-item-symbol{
+    -fx-background-radius: 0;
+}
+
+.chart-legend-item{
+    -fx-text-fill: -tertiary-color;
+}
+
+.chart-title {
+    -fx-text-fill: -tertiary-color;
+    -fx-font-size: 16;
+    -fx-font-family: 'Krona One';
+}
+
+.axis-label {
+    -fx-text-fill: -tertiary-color;
+    -fx-font-size: 10;
+    -fx-font-family: 'Krona One';
 }
