--- a/src/assets/FXML/admin_dashboard.fxml
+++ b/src/assets/FXML/admin_dashboard.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -126,7 +127,7 @@
                                           <Insets left="10.0" />
                                        </padding>
                                     </ComboBox>
-                                    <Label fx:id="textarea_communeA" alignment="TOP_LEFT" prefHeight="114.0" prefWidth="446.0" styleClass="show-text" />
+                                    <TextArea fx:id="textarea_communeA" editable="false" prefHeight="200.0" prefWidth="446.0" styleClass="show-text" visible="false" />
                                     <ComboBox fx:id="combobox_communeB1" onAction="#selectionCommuneB" prefWidth="150.0" promptText="Filtres">
                                        <HBox.margin>
                                           <Insets />
@@ -147,7 +148,7 @@
                                           <Insets left="10.0" />
                                        </padding>
                                     </ComboBox>
-                                    <Label fx:id="textarea_communeB" alignment="TOP_LEFT" prefHeight="100.0" prefWidth="446.0" styleClass="show-text" />
+                                    <TextArea fx:id="textarea_communeB" editable="false" prefHeight="200.0" prefWidth="446.0" styleClass="show-text" visible="false" />
                                  </children>
                                  <VBox.margin>
                                     <Insets left="10.0" top="5.0" />
@@ -158,7 +159,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
                                  </VBox.margin>
                                  <children>
-                                    <LineChart fx:id="linechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="384.0" prefWidth="491.0">
+                                    <LineChart fx:id="linechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="404.0" prefWidth="490.0" visible="false">
                                       <xAxis>
                                         <CategoryAxis side="BOTTOM" />
                                       </xAxis>
@@ -166,7 +167,7 @@
                                         <NumberAxis side="LEFT" />
                                       </yAxis>
                                     </LineChart>
-                                    <PieChart fx:id="piechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" />
+                                    <PieChart fx:id="piechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="420.0" prefWidth="299.0" visible="false" />
                                  </children>
                               </HBox>
                            </children>
